# Microservicios

./: README.md
Examenes/1erParcial/medico-typeorm/: .env.docker  Dockerfile  app.js  data-source.js  data-sourceLocal.js  docker-compose.yml  package.json
Practicas/Practica 1/: Comandos_ Practica1.txt
Practicas/Practica 2/: Comandos_ Practica2.txt
Practicas/Practica 3/calculadora-web/: Dockerfile  app.js  docker-compose.yml  package-lock.json  package.json
Practicas/Practica 3/tasks-app/: .env  .env.example  Dockerfile  app.js  docker-compose.yml  package-lock.json  package.json
Practicas/Practica 3/users-crud/: .env.example  Dockerfile  app.js  docker-compose.yml  package-lock.json  package.json
Practicas/Practica 4/graphql-biblioteca/: ormconfig.json  package-lock.json  package.json
Practicas/Practica 5/: ~$atica gRPC.docx
Practicas/Practica 5/grpc-estudiantes/: client.js  package.json  server.js
Practicas/Practica 6/micro-practica/: docker-compose.yml
Tareas/Tarea01_CRUD_Agenda/agenda-sql/: Comandos para crear un nuevo proyecto.txt  app.js  db.js  package-lock.json  package.json
Tareas/Tarea05_CreacionApis/rust-api-rest/: Cargo.toml  README.md
Tareas/Tarea05_CreacionApis/rust-api-rest/scripts/: index.html  setup_database.sql
Tareas/Tarea05_CreacionApis/rust-api-rest/src/: main.rs
Tareas/Tarea05_CreacionApis/rust-api-rest/src/database/: connection.rs
Tareas/Tarea05_CreacionApis/rust-api-rest/src/handlers/: alumnos.rs  mod.rs
Tareas/Tarea05_CreacionApis/rust-api-rest/src/models/: alumno.rs  mod.rs
(+98 files in other folders)
