[package]
name = "rust-api-rest"
version = "0.1.0"
edition = "2024"


[dependencies]
# Framework web
axum = "0.8.4"
# tokio es para manejo asíncrono
tokio = { version = "1.0", features = ["full"] } 
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Base de datos
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Documentación API (Swagger)
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Utilidades
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"

# Validación
validator = { version = "0.20.0", features = ["derive"] }
